<resources>
    <string name="app_name">Registration App</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>

    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="studentid">Student ID</string>
    <string name="register">Register</string>
    <string name="school">School</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>

    </resources>

